fix man entries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,41 +2,87 @@
 
 S3method(subset,hotspot)
 S3method(summary,hotspot)
+export(alleleOutput)
+export(alleleServer)
+export(alleleUI)
+export(dashInput)
+export(dashOutput)
+export(dashOutput2)
+export(dashServer)
+export(dashUI)
+export(diploServer)
+export(diploUI)
+export(geneExonInput)
+export(geneExonOutput)
+export(geneExonServer)
+export(geneExonUI)
+export(geneRegionInput)
+export(geneRegionOutput)
+export(geneRegionServer)
+export(geneRegionUI)
+export(haploServer)
+export(haploUI)
 export(hotspot)
-export(qtl2shinyApp)
-export(shinyAllele)
-export(shinyDash)
-export(shinyDiplo)
-export(shinyGeneExon)
-export(shinyGeneRegion)
-export(shinyHaplo)
-export(shinyHotspot)
-export(shinyMain)
-export(shinyMainInput)
-export(shinyMainOutput)
-export(shinyMainOutput2)
-export(shinyMainUI)
-export(shinyMediate)
-export(shinyPairProbs)
-export(shinyPattern)
-export(shinyPeaks)
-export(shinyPhenoPlot)
-export(shinyPhenos)
-export(shinyProbs)
-export(shinyProject)
-export(shinySNPFeature)
-export(shinySNPGene)
-export(shinySNPPattern)
-export(shinySNPPlot)
-export(shinySNPProbs)
-export(shinySNPSetup)
-export(shinySNPSum)
-export(shinyScanCoef)
-export(shinySetup)
-export(shinyTriad)
-importFrom(GGally,ggscatmat)
-importFrom(assertthat,assert_that)
-importFrom(dplyr,add_row)
+export(hotspotInput)
+export(hotspotOutput)
+export(hotspotServer)
+export(mainApp)
+export(mainInput)
+export(mainOutput)
+export(mainServer)
+export(mediateOutput)
+export(mediateServer)
+export(mediateUI)
+export(pairProbsServer)
+export(patternOutput)
+export(patternServer)
+export(patternUI)
+export(peaksInput)
+export(peaksOutput)
+export(peaksServer)
+export(peaksUI)
+export(phenoOutput)
+export(phenoPlotServer)
+export(phenoPlotUI)
+export(phenoServer)
+export(phenoUI)
+export(probsServer)
+export(projectServer)
+export(projectUI)
+export(scanCoefOutput)
+export(scanCoefServer)
+export(scanCoefUI)
+export(setupInput)
+export(setupServer)
+export(setupUI)
+export(snpFeatureInput)
+export(snpFeatureOutput)
+export(snpFeatureServer)
+export(snpFeatureUI)
+export(snpGeneInput)
+export(snpGeneOutput)
+export(snpGeneServer)
+export(snpGeneUI)
+export(snpPatternInput)
+export(snpPatternOutput)
+export(snpPatternServer)
+export(snpPatternUI)
+export(snpPlotOutput)
+export(snpPlotServer)
+export(snpPlotUI)
+export(snpProbsServer)
+export(snpSetupOutput)
+export(snpSetupServer)
+export(snpSetupUI)
+export(snpSumInput)
+export(snpSumOutput)
+export(snpSumServer)
+export(snpSumUI)
+export(triadOutput)
+export(triadServer)
+export(triadUI)
+importFrom(DT,dataTableOutput)
+importFrom(DT,renderDataTable)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -48,29 +94,20 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
-importFrom(gdata,humanReadable)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_string)
 importFrom(ggplot2,autoplot)
-importFrom(ggplot2,geom_density)
-importFrom(ggplot2,geom_rug)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
-importFrom(ggplot2,scale_y_sqrt)
 importFrom(ggplot2,theme_void)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
-importFrom(grid,plotViewport)
-importFrom(grid,pushViewport)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
 importFrom(purrr,transpose)
 importFrom(qtl2,find_marker)
-importFrom(qtl2,scan1)
-importFrom(qtl2ggplot,ggplot_scan1)
-importFrom(qtl2ggplot,listof_scan1coef)
 importFrom(qtl2mediate,comediator_region)
 importFrom(qtl2mediate,comediator_type)
 importFrom(qtl2mediate,covar_matrix)
@@ -79,16 +116,11 @@ importFrom(qtl2mediate,get_covar)
 importFrom(qtl2mediate,get_snpprobs)
 importFrom(qtl2mediate,mediation_test_qtl2)
 importFrom(qtl2mediate,mediation_triad_qtl2)
-importFrom(qtl2mediate,pheno_trans)
 importFrom(qtl2mediate,scan1covar)
-importFrom(qtl2mediate,sexcovar)
 importFrom(qtl2mediate,which_covar)
-importFrom(qtl2pattern,allele1)
 importFrom(qtl2pattern,create_probs_query_func)
 importFrom(qtl2pattern,gene_exon)
-importFrom(qtl2pattern,merge_feature)
 importFrom(qtl2pattern,read_fast)
-importFrom(qtl2pattern,scan1pattern)
 importFrom(qtl2pattern,sdp_to_pattern)
 importFrom(qtl2pattern,snpprob_collapse)
 importFrom(qtl2pattern,top_snps_pattern)
@@ -96,11 +128,9 @@ importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,checkboxInput)
 importFrom(shiny,column)
-importFrom(shiny,dataTableOutput)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidRow)
-importFrom(shiny,incProgress)
 importFrom(shiny,isTruthy)
 importFrom(shiny,mainPanel)
 importFrom(shiny,moduleServer)
@@ -109,20 +139,17 @@ importFrom(shiny,observeEvent)
 importFrom(shiny,plotOutput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
-importFrom(shiny,renderDataTable)
 importFrom(shiny,renderPlot)
-importFrom(shiny,renderTable)
 importFrom(shiny,renderText)
 importFrom(shiny,renderUI)
 importFrom(shiny,req)
-importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
 importFrom(shiny,setProgress)
+importFrom(shiny,shinyApp)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,singleton)
 importFrom(shiny,sliderInput)
 importFrom(shiny,strong)
-importFrom(shiny,tableOutput)
 importFrom(shiny,tagList)
 importFrom(shiny,textInput)
 importFrom(shiny,textOutput)
@@ -132,8 +159,8 @@ importFrom(shiny,updateRadioButtons)
 importFrom(shiny,updateSelectInput)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,withProgress)
+importFrom(shinydashboard,tabItems)
 importFrom(tidyr,pivot_wider)
-importFrom(tidyr,unite)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,packageVersion)
