--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,8 @@ importFrom(shiny,column)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidRow)
+importFrom(shiny,icon)
+importFrom(shiny,includeMarkdown)
 importFrom(shiny,isTruthy)
 importFrom(shiny,mainPanel)
 importFrom(shiny,moduleServer)
@@ -159,6 +161,13 @@ importFrom(shiny,updateRadioButtons)
 importFrom(shiny,updateSelectInput)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,withProgress)
+importFrom(shinydashboard,dashboardBody)
+importFrom(shinydashboard,dashboardHeader)
+importFrom(shinydashboard,dashboardPage)
+importFrom(shinydashboard,dashboardSidebar)
+importFrom(shinydashboard,menuItem)
+importFrom(shinydashboard,sidebarMenu)
+importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
 importFrom(tidyr,pivot_wider)
 importFrom(tools,file_ext)
