--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ importFrom(shiny,singleton)
 importFrom(shiny,sliderInput)
 importFrom(shiny,strong)
 importFrom(shiny,tagList)
+importFrom(shiny,tags)
 importFrom(shiny,textInput)
 importFrom(shiny,textOutput)
 importFrom(shiny,uiOutput)
