--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
 importFrom(purrr,transpose)
 importFrom(qtl2,find_marker)
+importFrom(qtl2ggplot,summary_scan1)
 importFrom(qtl2mediate,comediator_region)
 importFrom(qtl2mediate,comediator_type)
 importFrom(qtl2mediate,covar_matrix)
