--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ importFrom(shiny,fluidRow)
 importFrom(shiny,icon)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,isTruthy)
+importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
 importFrom(shiny,moduleServer)
 importFrom(shiny,numericInput)
