--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(summary,hotspot)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
+export(covar_matrix)
 export(dashInput)
 export(dashOutput)
 export(dashOutput2)
@@ -12,6 +13,11 @@ export(dashServer)
 export(dashUI)
 export(diploServer)
 export(diploUI)
+export(downloadApp)
+export(downloadInput)
+export(downloadOutput)
+export(downloadServer)
+export(downloadUI)
 export(geneExonInput)
 export(geneExonOutput)
 export(geneExonServer)
@@ -49,12 +55,14 @@ export(phenoUI)
 export(probsServer)
 export(projectServer)
 export(projectUI)
+export(scan1covar)
 export(scanCoefOutput)
 export(scanCoefServer)
 export(scanCoefUI)
 export(setupInput)
 export(setupServer)
 export(setupUI)
+export(sexcovar)
 export(snpFeatureInput)
 export(snpFeatureOutput)
 export(snpFeatureServer)
@@ -81,8 +89,14 @@ export(snpSumUI)
 export(triadOutput)
 export(triadServer)
 export(triadUI)
+export(which_covar)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
+importFrom(bslib,card)
+importFrom(bslib,card_header)
+importFrom(bslib,layout_columns)
+importFrom(bslib,page_sidebar)
+importFrom(bslib,sidebar)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -103,11 +117,13 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_void)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(grDevices,png)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
 importFrom(purrr,transpose)
 importFrom(qtl2,find_marker)
+importFrom(qtl2,scan1)
 importFrom(qtl2ggplot,summary_scan1)
 importFrom(qtl2mediate,comediator_region)
 importFrom(qtl2mediate,comediator_type)
@@ -127,11 +143,13 @@ importFrom(qtl2pattern,snpprob_collapse)
 importFrom(qtl2pattern,top_snps_pattern)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
+importFrom(shiny,br)
 importFrom(shiny,checkboxInput)
 importFrom(shiny,column)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidRow)
+importFrom(shiny,h5)
 importFrom(shiny,icon)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,isTruthy)
@@ -143,6 +161,7 @@ importFrom(shiny,observeEvent)
 importFrom(shiny,plotOutput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
+importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
 importFrom(shiny,renderText)
 importFrom(shiny,renderUI)
@@ -156,6 +175,7 @@ importFrom(shiny,sliderInput)
 importFrom(shiny,strong)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shiny,textAreaInput)
 importFrom(shiny,textInput)
 importFrom(shiny,textOutput)
 importFrom(shiny,uiOutput)
@@ -172,6 +192,9 @@ importFrom(shinydashboard,menuItem)
 importFrom(shinydashboard,sidebarMenu)
 importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
+importFrom(stats,as.formula)
+importFrom(stats,formula)
+importFrom(stats,model.matrix)
 importFrom(tidyr,pivot_wider)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
