--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(geneRegionUI)
 export(haploServer)
 export(haploUI)
 export(hotspot)
+export(hotspotApp)
 export(hotspotInput)
 export(hotspotOutput)
 export(hotspotServer)
@@ -43,23 +44,27 @@ export(pairProbsServer)
 export(patternOutput)
 export(patternServer)
 export(patternUI)
-export(peaksInput)
-export(peaksOutput)
-export(peaksServer)
-export(peaksUI)
+export(peakApp)
+export(peakInput)
+export(peakOutput)
+export(peakServer)
+export(peakUI)
 export(phenoOutput)
 export(phenoPlotServer)
 export(phenoPlotUI)
 export(phenoServer)
 export(phenoUI)
 export(probsServer)
+export(projectApp)
 export(projectServer)
 export(projectUI)
 export(scan1covar)
-export(scanCoefOutput)
-export(scanCoefServer)
-export(scanCoefUI)
+export(scanOutput)
+export(scanServer)
+export(scanUI)
+export(setupApp)
 export(setupInput)
+export(setupOutput)
 export(setupServer)
 export(setupUI)
 export(sexcovar)
@@ -94,7 +99,7 @@ importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(bslib,card)
 importFrom(bslib,card_header)
-importFrom(bslib,layout_columns)
+importFrom(bslib,page)
 importFrom(bslib,page_sidebar)
 importFrom(bslib,sidebar)
 importFrom(dplyr,arrange)
@@ -113,11 +118,11 @@ importFrom(ggplot2,autoplot)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_void)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
-importFrom(grDevices,png)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
@@ -143,13 +148,15 @@ importFrom(qtl2pattern,snpprob_collapse)
 importFrom(qtl2pattern,top_snps_pattern)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
+importFrom(shiny,actionButton)
 importFrom(shiny,br)
 importFrom(shiny,checkboxInput)
 importFrom(shiny,column)
+importFrom(shiny,div)
 importFrom(shiny,downloadButton)
 importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidRow)
-importFrom(shiny,h5)
+importFrom(shiny,h4)
 importFrom(shiny,icon)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,isTruthy)
@@ -161,8 +168,10 @@ importFrom(shiny,observeEvent)
 importFrom(shiny,plotOutput)
 importFrom(shiny,radioButtons)
 importFrom(shiny,reactive)
+importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
+importFrom(shiny,renderTable)
 importFrom(shiny,renderText)
 importFrom(shiny,renderUI)
 importFrom(shiny,req)
@@ -173,6 +182,7 @@ importFrom(shiny,sidebarPanel)
 importFrom(shiny,singleton)
 importFrom(shiny,sliderInput)
 importFrom(shiny,strong)
+importFrom(shiny,tableOutput)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shiny,textAreaInput)
