--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(peakInput)
 export(peakOutput)
 export(peakServer)
 export(peakUI)
+export(phenoApp)
 export(phenoOutput)
 export(phenoPlotServer)
 export(phenoPlotUI)
