--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(peakOutput)
 export(peakServer)
 export(peakUI)
 export(phenoApp)
+export(phenoInput)
 export(phenoOutput)
 export(phenoPlotServer)
 export(phenoPlotUI)
