df name changes; some logic in setup apps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
 export(geneRegionUI)
+export(haploApp)
 export(haploServer)
 export(haploUI)
 export(hotspot)
@@ -48,7 +49,6 @@ export(peakApp)
 export(peakInput)
 export(peakOutput)
 export(peakServer)
-export(peakUI)
 export(phenoApp)
 export(phenoInput)
 export(phenoOutput)
@@ -61,6 +61,7 @@ export(projectApp)
 export(projectServer)
 export(projectUI)
 export(scan1covar)
+export(scanApp)
 export(scanOutput)
 export(scanServer)
 export(scanUI)
