new setParApp; modified phenoApp, hotspotApp, peakApp; changes needed in phenoApp; setupApp needs fixing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,10 @@ export(scanApp)
 export(scanOutput)
 export(scanServer)
 export(scanUI)
+export(setParApp)
+export(setParInput)
+export(setParOutput)
+export(setParServer)
 export(setupApp)
 export(setupInput)
 export(setupOutput)
