switching from analyses to peaks file; working for setPar, hotspot and peak apps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
 export(covar_matrix)
+export(create_peak_class)
 export(dashInput)
 export(dashOutput)
 export(dashOutput2)
@@ -49,6 +50,7 @@ export(peakApp)
 export(peakInput)
 export(peakOutput)
 export(peakServer)
+export(peak_class)
 export(phenoApp)
 export(phenoInput)
 export(phenoOutput)
@@ -60,6 +62,9 @@ export(probsServer)
 export(projectApp)
 export(projectServer)
 export(projectUI)
+export(project_classes)
+export(read_peak_class)
+export(read_project)
 export(scan1covar)
 export(scanApp)
 export(scanOutput)
@@ -212,6 +217,7 @@ importFrom(shinydashboard,tabItems)
 importFrom(stats,as.formula)
 importFrom(stats,formula)
 importFrom(stats,model.matrix)
+importFrom(stringr,str_remove)
 importFrom(tidyr,pivot_wider)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
