--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ S3method(summary,hotspot)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
-export(covar_matrix)
 export(create_peak_class)
 export(dashInput)
 export(dashOutput)
@@ -27,6 +26,11 @@ export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
 export(geneRegionUI)
+export(hapParApp)
+export(hapParInput)
+export(hapParOutput)
+export(hapParServer)
+export(hapParUI)
 export(haploApp)
 export(haploServer)
 export(haploUI)
@@ -78,7 +82,6 @@ export(setupInput)
 export(setupOutput)
 export(setupServer)
 export(setupUI)
-export(sexcovar)
 export(snpFeatureInput)
 export(snpFeatureOutput)
 export(snpFeatureServer)
@@ -95,6 +98,8 @@ export(snpPlotOutput)
 export(snpPlotServer)
 export(snpPlotUI)
 export(snpProbsServer)
+export(snpSetupApp)
+export(snpSetupInput)
 export(snpSetupOutput)
 export(snpSetupServer)
 export(snpSetupUI)
@@ -105,7 +110,6 @@ export(snpSumUI)
 export(triadOutput)
 export(triadServer)
 export(triadUI)
-export(which_covar)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(bslib,card)
@@ -213,9 +217,6 @@ importFrom(shinydashboard,menuItem)
 importFrom(shinydashboard,sidebarMenu)
 importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
-importFrom(stats,as.formula)
-importFrom(stats,formula)
-importFrom(stats,model.matrix)
 importFrom(stringr,str_remove)
 importFrom(tidyr,pivot_wider)
 importFrom(tools,file_ext)
