--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,13 @@ export(snpGeneInput)
 export(snpGeneOutput)
 export(snpGeneServer)
 export(snpGeneUI)
+export(snpListApp)
+export(snpListInput)
+export(snpListInput2)
+export(snpListOutput)
+export(snpListServer)
+export(snpListUI)
+export(snpPatternApp)
 export(snpPatternInput)
 export(snpPatternOutput)
 export(snpPatternServer)
