add classes tables to projectApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(phenoPlotUI)
 export(phenoServer)
 export(probsServer)
 export(projectApp)
+export(projectOutput)
 export(projectServer)
 export(projectUI)
 export(project_classes)
