improvements on read_pheno and read_peaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,6 @@ export(peakApp)
 export(peakInput)
 export(peakOutput)
 export(peakServer)
-export(peak_class)
 export(phenoApp)
 export(phenoInput)
 export(phenoOutput)
@@ -67,7 +66,8 @@ export(projectOutput)
 export(projectServer)
 export(projectUI)
 export(project_classes)
-export(read_peak_class)
+export(read_peaks)
+export(read_pheno)
 export(read_project)
 export(scan1covar)
 export(scanApp)
@@ -151,6 +151,7 @@ importFrom(plotly,renderPlotly)
 importFrom(purrr,map)
 importFrom(purrr,transpose)
 importFrom(qtl2,find_marker)
+importFrom(qtl2,get_common_ids)
 importFrom(qtl2,scan1)
 importFrom(qtl2ggplot,summary_scan1)
 importFrom(qtl2mediate,comediator_region)
@@ -227,6 +228,7 @@ importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
 importFrom(stringr,str_remove)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,unite)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,packageVersion)
