peakReadApp, peakApp->winParApp, phenoReadApp begin

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,15 +51,17 @@ export(pairProbsServer)
 export(patternOutput)
 export(patternServer)
 export(patternUI)
-export(peakApp)
-export(peakInput)
-export(peakOutput)
-export(peakServer)
+export(peakReadApp)
+export(peakReadOutput)
+export(peakReadServer)
 export(phenoApp)
 export(phenoInput)
 export(phenoOutput)
 export(phenoPlotServer)
 export(phenoPlotUI)
+export(phenoReadApp)
+export(phenoReadOutput)
+export(phenoReadServer)
 export(phenoServer)
 export(probsServer)
 export(projectApp)
@@ -119,6 +121,10 @@ export(snpSumUI)
 export(triadOutput)
 export(triadServer)
 export(triadUI)
+export(winParApp)
+export(winParInput)
+export(winParOutput)
+export(winParServer)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(bslib,card)
