--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ S3method(summary,hotspot)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
+export(covarApp)
+export(covarOutput)
+export(covarServer)
 export(create_peak_class)
 export(dashInput)
 export(dashOutput)
@@ -51,18 +54,22 @@ export(pairProbsServer)
 export(patternOutput)
 export(patternServer)
 export(patternUI)
-export(peakReadApp)
-export(peakReadOutput)
-export(peakReadServer)
+export(peakApp)
+export(peakOutput)
+export(peakServer)
 export(phenoApp)
-export(phenoInput)
+export(phenoNamesApp)
+export(phenoNamesInput)
+export(phenoNamesOutput)
+export(phenoNamesServer)
 export(phenoOutput)
+export(phenoPlotApp)
+export(phenoPlotOutput)
 export(phenoPlotServer)
-export(phenoPlotUI)
-export(phenoReadApp)
-export(phenoReadOutput)
-export(phenoReadServer)
 export(phenoServer)
+export(pmapApp)
+export(pmapOutput)
+export(pmapServer)
 export(probsServer)
 export(projectApp)
 export(projectOutput)
