remove pmapServer; add kinshipServer; use phenoServer, covarServer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,9 @@ export(hotspotApp)
 export(hotspotInput)
 export(hotspotOutput)
 export(hotspotServer)
+export(kinshipApp)
+export(kinshipOutput)
+export(kinshipServer)
 export(mainApp)
 export(mainInput)
 export(mainOutput)
@@ -67,9 +70,6 @@ export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
 export(phenoServer)
-export(pmapApp)
-export(pmapOutput)
-export(pmapServer)
 export(probsServer)
 export(projectApp)
 export(projectOutput)
