--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,7 @@ importFrom(shiny,renderText)
 importFrom(shiny,renderUI)
 importFrom(shiny,req)
 importFrom(shiny,selectInput)
+importFrom(shiny,selectizeInput)
 importFrom(shiny,setProgress)
 importFrom(shiny,shinyApp)
 importFrom(shiny,sidebarPanel)
@@ -230,6 +231,7 @@ importFrom(shiny,uiOutput)
 importFrom(shiny,updateNumericInput)
 importFrom(shiny,updateRadioButtons)
 importFrom(shiny,updateSelectInput)
+importFrom(shiny,updateSelectizeInput)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,withProgress)
 importFrom(shinydashboard,dashboardBody)
@@ -241,6 +243,7 @@ importFrom(shinydashboard,sidebarMenu)
 importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
 importFrom(stringr,str_remove)
+importFrom(tibble,column_to_rownames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unite)
 importFrom(tools,file_ext)
