--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(setParApp)
 export(setParInput)
 export(setParOutput)
 export(setParServer)
+export(setParUI)
 export(setupApp)
 export(setupInput)
 export(setupOutput)
@@ -132,10 +133,12 @@ export(winParApp)
 export(winParInput)
 export(winParOutput)
 export(winParServer)
+export(winParUI)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(bslib,card)
 importFrom(bslib,card_header)
+importFrom(bslib,layout_columns)
 importFrom(bslib,page)
 importFrom(bslib,page_sidebar)
 importFrom(bslib,sidebar)
