--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
 export(phenoServer)
+export(phenoUI)
 export(probsServer)
 export(projectApp)
 export(projectOutput)
@@ -149,10 +150,13 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,geom_point)
