rename setupApp as hotspotPanelApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,11 @@ export(hotspot)
 export(hotspotApp)
 export(hotspotInput)
 export(hotspotOutput)
+export(hotspotPanelApp)
+export(hotspotPanelInput)
+export(hotspotPanelOutput)
+export(hotspotPanelServer)
+export(hotspotPanelUI)
 export(hotspotServer)
 export(kinshipApp)
 export(kinshipOutput)
@@ -90,11 +95,6 @@ export(setParInput)
 export(setParOutput)
 export(setParServer)
 export(setParUI)
-export(setupApp)
-export(setupInput)
-export(setupOutput)
-export(setupServer)
-export(setupUI)
 export(snpFeatureInput)
 export(snpFeatureOutput)
 export(snpFeatureServer)
