--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(hotspotPanelOutput)
 export(hotspotPanelServer)
 export(hotspotPanelUI)
 export(hotspotServer)
+export(hotspotUI)
 export(kinshipApp)
 export(kinshipOutput)
 export(kinshipServer)
@@ -132,7 +133,6 @@ export(triadServer)
 export(triadUI)
 export(winParApp)
 export(winParInput)
-export(winParOutput)
 export(winParServer)
 export(winParUI)
 importFrom(DT,dataTableOutput)
