--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(mainApp)
 export(mainInput)
 export(mainOutput)
 export(mainServer)
+export(mediateApp)
 export(mediateOutput)
 export(mediateServer)
 export(mediateUI)
@@ -71,6 +72,7 @@ export(phenoNamesApp)
 export(phenoNamesInput)
 export(phenoNamesOutput)
 export(phenoNamesServer)
+export(phenoNamesUI)
 export(phenoOutput)
 export(phenoPlotApp)
 export(phenoPlotOutput)
@@ -134,7 +136,6 @@ export(triadUI)
 export(winParApp)
 export(winParInput)
 export(winParServer)
-export(winParUI)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(bslib,card)
