work in progress on haploApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,13 @@ export(dashOutput)
 export(dashOutput2)
 export(dashServer)
 export(dashUI)
+export(dipParApp)
+export(dipParInput)
+export(dipParOutput)
+export(dipParServer)
+export(dipParUI)
+export(diploApp)
+export(diploOutput)
 export(diploServer)
 export(diploUI)
 export(downloadApp)
@@ -36,6 +43,7 @@ export(hapParOutput)
 export(hapParServer)
 export(hapParUI)
 export(haploApp)
+export(haploOutput)
 export(haploServer)
 export(haploUI)
 export(hotspot)
@@ -77,6 +85,7 @@ export(phenoOutput)
 export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
+export(phenoPlotUI)
 export(phenoServer)
 export(phenoUI)
 export(probsServer)
@@ -135,6 +144,7 @@ export(triadServer)
 export(triadUI)
 export(winParApp)
 export(winParInput)
+export(winParOutput)
 export(winParServer)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
@@ -144,6 +154,7 @@ importFrom(bslib,layout_columns)
 importFrom(bslib,page)
 importFrom(bslib,page_sidebar)
 importFrom(bslib,sidebar)
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
@@ -158,6 +169,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,where)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,geom_point)
@@ -253,6 +265,7 @@ importFrom(shinydashboard,tabItems)
 importFrom(stringr,str_remove)
 importFrom(tibble,column_to_rownames)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,separate_wider_delim)
 importFrom(tidyr,unite)
 importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
