--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,9 @@ export(haploOutput)
 export(haploServer)
 export(haploUI)
 export(hotspot)
+export(hotspotAccordionApp)
 export(hotspotApp)
+export(hotspotHotspotOutput)
 export(hotspotInput)
 export(hotspotOutput)
 export(hotspotPanelApp)
@@ -55,6 +57,7 @@ export(hotspotPanelInput)
 export(hotspotPanelOutput)
 export(hotspotPanelServer)
 export(hotspotPanelUI)
+export(hotspotPhenoOutput)
 export(hotspotServer)
 export(hotspotUI)
 export(kinshipApp)
@@ -148,10 +151,15 @@ export(winParOutput)
 export(winParServer)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
+importFrom(bslib,accordion)
+importFrom(bslib,accordion_panel)
 importFrom(bslib,card)
 importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
+importFrom(bslib,layout_sidebar)
+importFrom(bslib,nav_panel)
 importFrom(bslib,page)
+importFrom(bslib,page_navbar)
 importFrom(bslib,page_sidebar)
 importFrom(bslib,sidebar)
 importFrom(dplyr,across)
