--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,6 @@ export(haploUI)
 export(hotspot)
 export(hotspotAccordionApp)
 export(hotspotApp)
-export(hotspotHotspotOutput)
 export(hotspotInput)
 export(hotspotOutput)
 export(hotspotPanelApp)
@@ -57,7 +56,7 @@ export(hotspotPanelInput)
 export(hotspotPanelOutput)
 export(hotspotPanelServer)
 export(hotspotPanelUI)
-export(hotspotPhenoOutput)
+export(hotspotPartsApp)
 export(hotspotServer)
 export(hotspotUI)
 export(kinshipApp)
