--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(snpFeatureInput)
 export(snpFeatureOutput)
 export(snpFeatureServer)
 export(snpFeatureUI)
+export(snpGeneApp)
 export(snpGeneInput)
 export(snpGeneOutput)
 export(snpGeneServer)
