progress on mediateApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(summary,hotspot)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
+export(comediator_region)
+export(comediator_type)
 export(covarApp)
 export(covarOutput)
 export(covarServer)
@@ -29,6 +31,7 @@ export(downloadInput)
 export(downloadOutput)
 export(downloadServer)
 export(downloadUI)
+export(expr_region)
 export(geneExonInput)
 export(geneExonOutput)
 export(geneExonServer)
@@ -90,6 +93,7 @@ export(phenoPlotServer)
 export(phenoPlotUI)
 export(phenoServer)
 export(phenoUI)
+export(pheno_region)
 export(probsServer)
 export(projectApp)
 export(projectOutput)
@@ -171,7 +175,10 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,one_of)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
@@ -196,8 +203,6 @@ importFrom(qtl2,find_marker)
 importFrom(qtl2,get_common_ids)
 importFrom(qtl2,scan1)
 importFrom(qtl2ggplot,summary_scan1)
-importFrom(qtl2mediate,comediator_region)
-importFrom(qtl2mediate,comediator_type)
 importFrom(qtl2mediate,covar_matrix)
 importFrom(qtl2mediate,expr_region)
 importFrom(qtl2mediate,get_covar)
@@ -271,6 +276,7 @@ importFrom(shinydashboard,sidebarMenu)
 importFrom(shinydashboard,tabItem)
 importFrom(shinydashboard,tabItems)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_split)
 importFrom(tibble,column_to_rownames)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate_wider_delim)
