--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(mediateOutput)
 export(mediateServer)
 export(mediateUI)
 export(pairProbsServer)
+export(patternApp)
 export(patternOutput)
 export(patternServer)
 export(patternUI)
@@ -123,6 +124,7 @@ export(snpGeneOutput)
 export(snpGeneServer)
 export(snpGeneUI)
 export(snpListApp)
+export(snpListDiploApp)
 export(snpListInput)
 export(snpListInput2)
 export(snpListOutput)
@@ -138,6 +140,7 @@ export(snpPlotServer)
 export(snpPlotUI)
 export(snpProbsServer)
 export(snpSetupApp)
+export(snpSetupDiploApp)
 export(snpSetupInput)
 export(snpSetupOutput)
 export(snpSetupServer)
