--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(cbind,hotspot)
 S3method(subset,hotspot)
 S3method(summary,hotspot)
+export(alleleApp)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
@@ -75,7 +76,11 @@ export(mediateServer)
 export(mediateUI)
 export(pairProbsServer)
 export(patternApp)
+export(patternInput)
 export(patternOutput)
+export(patternPlotApp)
+export(patternPlotOutput)
+export(patternPlotServer)
 export(patternServer)
 export(patternUI)
 export(peakApp)
@@ -217,6 +222,7 @@ importFrom(qtl2mediate,which_covar)
 importFrom(qtl2pattern,create_probs_query_func)
 importFrom(qtl2pattern,gene_exon)
 importFrom(qtl2pattern,read_fast)
+importFrom(qtl2pattern,scan1pattern)
 importFrom(qtl2pattern,sdp_to_pattern)
 importFrom(qtl2pattern,snpprob_collapse)
 importFrom(qtl2pattern,top_snps_pattern)
