--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(cbind,hotspot)
 S3method(subset,hotspot)
 S3method(summary,hotspot)
 export(alleleApp)
+export(alleleInput)
 export(alleleOutput)
 export(alleleServer)
 export(alleleUI)
@@ -47,6 +48,7 @@ export(hapParOutput)
 export(hapParServer)
 export(hapParUI)
 export(haploApp)
+export(haploInput)
 export(haploOutput)
 export(haploServer)
 export(haploUI)
@@ -111,6 +113,7 @@ export(read_pheno)
 export(read_project)
 export(scan1covar)
 export(scanApp)
+export(scanInput)
 export(scanOutput)
 export(scanServer)
 export(scanUI)
@@ -170,6 +173,8 @@ importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
 importFrom(bslib,layout_sidebar)
 importFrom(bslib,nav_panel)
+importFrom(bslib,navbar_options)
+importFrom(bslib,navset_tab)
 importFrom(bslib,page)
 importFrom(bslib,page_navbar)
 importFrom(bslib,page_sidebar)
