--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,7 +147,12 @@ export(snpPlotOutput)
 export(snpPlotServer)
 export(snpPlotUI)
 export(snpProbsServer)
+export(snpSetupApp)
 export(snpSetupDiploApp)
+export(snpSetupInput)
+export(snpSetupOutput)
+export(snpSetupServer)
+export(snpSetupUI)
 export(snpSumInput)
 export(snpSumOutput)
 export(snpSumServer)
