--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(alleleApp)
 export(alleleInput)
 export(alleleOutput)
 export(alleleServer)
-export(alleleUI)
 export(comediator_region)
 export(comediator_type)
 export(covarApp)
@@ -34,14 +33,14 @@ export(downloadOutput)
 export(downloadServer)
 export(downloadUI)
 export(expr_region)
+export(geneExonApp)
 export(geneExonInput)
 export(geneExonOutput)
 export(geneExonServer)
-export(geneExonUI)
+export(geneRegionApp)
 export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
-export(geneRegionUI)
 export(hapParApp)
 export(hapParInput)
 export(hapParOutput)
@@ -122,15 +121,13 @@ export(setParInput)
 export(setParOutput)
 export(setParServer)
 export(setParUI)
-export(snpFeatureInput)
+export(snpFeatureApp)
 export(snpFeatureOutput)
 export(snpFeatureServer)
-export(snpFeatureUI)
 export(snpGeneApp)
 export(snpGeneInput)
 export(snpGeneOutput)
 export(snpGeneServer)
-export(snpGeneUI)
 export(snpListApp)
 export(snpListDiploApp)
 export(snpListInput)
@@ -139,10 +136,8 @@ export(snpListOutput)
 export(snpListServer)
 export(snpListUI)
 export(snpPatternApp)
-export(snpPatternInput)
 export(snpPatternOutput)
 export(snpPatternServer)
-export(snpPatternUI)
 export(snpPlotOutput)
 export(snpPlotServer)
 export(snpPlotUI)
@@ -153,10 +148,9 @@ export(snpSetupInput)
 export(snpSetupOutput)
 export(snpSetupServer)
 export(snpSetupUI)
-export(snpSumInput)
+export(snpSumApp)
 export(snpSumOutput)
 export(snpSumServer)
-export(snpSumUI)
 export(triadOutput)
 export(triadServer)
 export(triadUI)
@@ -172,7 +166,10 @@ importFrom(bslib,card)
 importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
 importFrom(bslib,layout_sidebar)
+importFrom(bslib,nav_hide)
 importFrom(bslib,nav_panel)
+importFrom(bslib,nav_select)
+importFrom(bslib,nav_show)
 importFrom(bslib,navbar_options)
 importFrom(bslib,navset_tab)
 importFrom(bslib,page)
@@ -276,7 +273,6 @@ importFrom(shiny,textInput)
 importFrom(shiny,textOutput)
 importFrom(shiny,uiOutput)
 importFrom(shiny,updateNumericInput)
-importFrom(shiny,updateRadioButtons)
 importFrom(shiny,updateSelectInput)
 importFrom(shiny,updateSelectizeInput)
 importFrom(shiny,updateSliderInput)
