work to date; stuck on triadApp and need to update mediateApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,10 @@ export(mainApp)
 export(mainInput)
 export(mainOutput)
 export(mainServer)
+export(medListApp)
+export(medListInput)
+export(medListOutput)
+export(medListServer)
 export(mediateApp)
 export(mediateOutput)
 export(mediateServer)
@@ -151,6 +155,7 @@ export(snpSetupUI)
 export(snpSumApp)
 export(snpSumOutput)
 export(snpSumServer)
+export(triadApp)
 export(triadOutput)
 export(triadServer)
 export(triadUI)
