complete renaming of mediateApp and mediatePlotApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,14 +71,14 @@ export(mainApp)
 export(mainInput)
 export(mainOutput)
 export(mainServer)
-export(medListApp)
-export(medListInput)
-export(medListOutput)
-export(medListServer)
 export(mediateApp)
+export(mediateInput)
 export(mediateOutput)
+export(mediatePlotApp)
+export(mediatePlotInput)
+export(mediatePlotOutput)
+export(mediatePlotServer)
 export(mediateServer)
-export(mediateUI)
 export(pairProbsServer)
 export(patternApp)
 export(patternInput)
