--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(mediatePlotInput)
 export(mediatePlotOutput)
 export(mediatePlotServer)
 export(mediateServer)
+export(mediateUI)
 export(pairProbsServer)
 export(patternApp)
 export(patternInput)
@@ -156,9 +157,9 @@ export(snpSumApp)
 export(snpSumOutput)
 export(snpSumServer)
 export(triadApp)
+export(triadInput)
 export(triadOutput)
 export(triadServer)
-export(triadUI)
 export(winParApp)
 export(winParInput)
 export(winParOutput)
