--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(covarApp)
 export(covarOutput)
 export(covarServer)
 export(create_peak_class)
+export(dashApp)
 export(dashInput)
 export(dashOutput)
 export(dashOutput2)
@@ -74,6 +75,10 @@ export(mainServer)
 export(mediateApp)
 export(mediateInput)
 export(mediateOutput)
+export(mediatePanelApp)
+export(mediatePanelInput)
+export(mediatePanelOutput)
+export(mediatePanelServer)
 export(mediatePlotApp)
 export(mediatePlotInput)
 export(mediatePlotOutput)
@@ -106,6 +111,7 @@ export(phenoPlotUI)
 export(phenoServer)
 export(phenoUI)
 export(pheno_region)
+export(probsApp)
 export(probsServer)
 export(projectApp)
 export(projectOutput)
@@ -134,25 +140,17 @@ export(snpGeneInput)
 export(snpGeneOutput)
 export(snpGeneServer)
 export(snpListApp)
-export(snpListDiploApp)
 export(snpListInput)
-export(snpListInput2)
 export(snpListOutput)
 export(snpListServer)
-export(snpListUI)
 export(snpPatternApp)
 export(snpPatternOutput)
 export(snpPatternServer)
+export(snpPlotApp)
 export(snpPlotOutput)
 export(snpPlotServer)
 export(snpPlotUI)
 export(snpProbsServer)
-export(snpSetupApp)
-export(snpSetupDiploApp)
-export(snpSetupInput)
-export(snpSetupOutput)
-export(snpSetupServer)
-export(snpSetupUI)
 export(snpSumApp)
 export(snpSumOutput)
 export(snpSumServer)
