--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,10 @@ export(phenoNamesOutput)
 export(phenoNamesServer)
 export(phenoNamesUI)
 export(phenoOutput)
+export(phenoPanelApp)
+export(phenoPanelInput)
+export(phenoPanelOutput)
+export(phenoPanelServer)
 export(phenoPlotApp)
 export(phenoPlotOutput)
 export(phenoPlotServer)
