--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,8 @@
 S3method(cbind,hotspot)
 S3method(subset,hotspot)
 S3method(summary,hotspot)
-export(alleleApp)
-export(alleleInput)
-export(alleleOutput)
-export(alleleServer)
 export(comediator_region)
 export(comediator_type)
-export(covarApp)
-export(covarOutput)
-export(covarServer)
 export(create_peak_class)
 export(dashApp)
 export(dashInput)
@@ -42,6 +35,10 @@ export(geneRegionApp)
 export(geneRegionInput)
 export(geneRegionOutput)
 export(geneRegionServer)
+export(genoApp)
+export(genoInput)
+export(genoOutput)
+export(genoServer)
 export(hapParApp)
 export(hapParInput)
 export(hapParOutput)
@@ -89,6 +86,10 @@ export(pairProbsServer)
 export(patternApp)
 export(patternInput)
 export(patternOutput)
+export(patternPanelApp)
+export(patternPanelInput)
+export(patternPanelOutput)
+export(patternPanelServer)
 export(patternPlotApp)
 export(patternPlotOutput)
 export(patternPlotServer)
@@ -122,6 +123,7 @@ export(projectOutput)
 export(projectServer)
 export(projectUI)
 export(project_classes)
+export(qtl2shinyApp)
 export(read_peaks)
 export(read_pheno)
 export(read_project)
@@ -129,6 +131,10 @@ export(scan1covar)
 export(scanApp)
 export(scanInput)
 export(scanOutput)
+export(scanPanelApp)
+export(scanPanelOutput)
+export(scanPanelServer)
+export(scanPanelUI)
 export(scanServer)
 export(setParApp)
 export(setParInput)
