--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,9 +132,9 @@ export(scanApp)
 export(scanInput)
 export(scanOutput)
 export(scanPanelApp)
+export(scanPanelInput)
 export(scanPanelOutput)
 export(scanPanelServer)
-export(scanPanelUI)
 export(scanServer)
 export(setParApp)
 export(setParInput)
